File storage service refactoring
